--- a/index.html
+++ b/index.html
@@ -1,13 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./src/styles/output.css">
-    <script src="./src/scripts/main.js" defer></script>
-    <title>PF Windbnd Vanilla</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Windbnb</title>
+  <script type="module" src="./src/scripts/main.js" defer></script>
+  <link rel="stylesheet" href="./src/styles/output.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
-<body>
-    <h1 class="bg-slate-800 text-white text-2xl">Hola mundo!</h1>
+<body class="bg-gray-100 font-sans">
+  
+  <!-- Header -->
+  <header class="flex justify-between items-center p-6 bg-white shadow-md relative">
+    <h1 class="text-xl font-bold text-red-500">windbnb</h1>
+    <div class="flex items-center border rounded-full overflow-hidden shadow-sm">
+      <button id="open-location-modal" class="px-4 py-2 border-r focus:outline-none" aria-label="Select location">Add location</button>
+      <button id="open-guests-modal" class="px-4 py-2 border-r focus:outline-none" aria-label="Select guests">
+        <span id="guest-info">Add guests</span>
+      </button>
+      <button id="filter-button" class="px-4 py-2 text-red-500 focus:outline-none" aria-label="Open filters">🔍</button>
+    </div>
+  </header>
+
+  <!-- Modal de Filtros -->
+  <div id="filter-modal" class="fixed inset-0 bg-white shadow-md transform -translate-y-full transition-transform duration-300 z-50 p-6">
+    <div class="max-w-4xl mx-auto">
+      <div class="flex justify-between items-center mb-4">
+        <h3 class="text-xl font-semibold">Filter Stays</h3>
+        <button id="close-filter-modal" class="text-gray-600 text-lg">×</button>
+      </div>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+        <!-- Ubicación -->
+        <div class="relative">
+          <label for="location-input" class="block text-gray-700">Location</label>
+          <div class="flex items-center border p-2 rounded-lg shadow-sm bg-white">
+            <span class="material-icons text-gray-600">location_on</span>
+            <input id="location-input" type="text" class="w-full pl-2 border-none focus:outline-none" placeholder="Enter city, country" autocomplete="off" list="location-options" />
+          </div>
+          <datalist id="location-options"></datalist>
+        </div>
+        <!-- Selección de huéspedes -->
+        <div class="relative">
+          <label class="block text-gray-700">Guests</label>
+          <div id="guests-toggle" class="flex items-center border p-2 rounded-lg shadow-sm bg-white cursor-pointer">
+            <span class="material-icons text-gray-600">people</span>
+            <span id="guest-info" class="ml-2">Add guests</span>
+          </div>
+          <div id="guests-options" class="absolute w-full mt-2 border bg-white shadow-lg hidden p-4 rounded-lg">
+            <div class="flex justify-between px-4 py-2">
+              <span class="text-sm text-gray-600">Adults</span>
+              <div class="flex items-center">
+                <button id="decrease-adults" class="px-2 py-1 text-sm">-</button>
+                <span id="adults-count" class="px-4 py-1">0</span>
+                <button id="increase-adults" class="px-2 py-1 text-sm">+</button>
+              </div>
+            </div>
+            <div class="flex justify-between px-4 py-2">
+              <span class="text-sm text-gray-600">Children</span>
+              <div class="flex items-center">
+                <button id="decrease-children" class="px-2 py-1 text-sm">-</button>
+                <span id="children-count" class="px-4 py-1">0</span>
+                <button id="increase-children" class="px-2 py-1 text-sm">+</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <button id="apply-filters" class="mt-4 w-full bg-red-500 text-white py-2 rounded-lg">Apply Filters</button>
+    </div>
+  </div>
+
+  <!-- Main Content -->
+  <main class="max-w-6xl mx-auto p-6">
+    <h2 class="text-2xl font-semibold">Stays in Finland</h2>
+    <p id="stays-count" class="text-gray-500 mb-6">12+ stays</p>
+    <div id="stays-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"></div>
+  </main>
+
 </body>
 </html>
+
+
