--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       <!-- Ubicación -->
       <div class="relative">
         <label for="location-input" class="block text-gray-700 font-semibold">Location</label>
-        <div class="flex items-center border p-2 rounded-lg shadow-sm bg-white">
+        <div class="flex items-center p-2 shadow-sm bg-white rounded-full">
           <span class="material-icons text-gray-600">location_on</span>
-          <input id="location-input" type="text" class="w-full pl-2 border-none focus:outline-none" placeholder="Enter city, country" autocomplete="off" />
+          <input id="location-input" type="text" class="w-full pl-2 focus:outline-none" placeholder="Enter city, country" autocomplete="off" />
         </div>
         <ul id="custom-datalist" class="absolute w-full bg-white border shadow-lg hidden mt-1 rounded-lg max-h-48 overflow-auto z-50"></ul>
       </div>
@@ -48,7 +48,7 @@
       <!-- Selección de huéspedes -->
       <div class="relative">
         <label class="block text-gray-700 font-semibold">Guests</label>
-        <div id="guests-toggle" class="flex items-center border p-2 rounded-lg shadow-sm bg-white cursor-pointer">
+        <div id="guests-toggle" class="flex items-center p-2 shadow-sm bg-white rounded-full cursor-pointer">
           <span class="material-icons text-gray-600">people</span>
           <span id="guest-info" class="ml-2">Add guests</span>
         </div>
@@ -75,13 +75,13 @@
           </div>
         </div>
       </div>
-      <div>
+      <div class="flex flex-col items-center justify-center space-y-4 p-2 shadow-sm bg-white rounded-full">
         <button id="apply-filters"
-        class="flex items-center justify-center h-full min-w-[80px] bg-red-500 text-white px-4 py-3 rounded-lg focus:outline-none hover:bg-red-600 shadow-md transition-colors duration-300">
-        <span class="material-icons mr-2">search</span>
-        Buscar
-      </button>
-       </div>
+            class="flex items-center justify-center bg-red-500 text-white px-4 py-2 p-2 shadow-sm rounded-full hover:bg-red-600 transition-colors duration-300">
+            <span class="material-icons mr-2">search</span>
+            search
+        </button>
+    </div>
     </div>
  </div>
 </div>
