--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Windbnb</title>
   <script type="module" src="./src/scripts/main.js" defer></script>
   <link rel="stylesheet" href="./src/styles/output.css" />
+  <link rel="stylesheet" href="./src/styles/main.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
 <body class="bg-gray-100 font-sans">
@@ -13,7 +14,7 @@
     <!-- Header -->
   <header class="flex justify-between items-center p-6 bg-white shadow-md relative">
     <img src="./src/images/icons/logo-f7862584.svg" alt="Windbnb Logo" class="w-auto max-w-[150px] h-auto">
-    <div class="flex items-center rounded-full overflow-hidden shadow-sm bg-white px-4 py-2 space-x-4">
+    <div class="button-container flex items-center rounded-full overflow-hidden shadow-sm bg-white px-4 py-2 space-x-4">
       <button id="open-location-modal" class="text-gray-500 focus:outline-none">Add Location</button>
       <span class=" border-gray-300 h-6"></span>
       <button id="open-guests-modal" class="text-gray-500 focus:outline-none">
