--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script type="module" src="./src/scripts/main.js" defer></script>
   <link rel="stylesheet" href="./src/styles/output.css" />
   <link rel="stylesheet" href="./src/styles/main.css" />
+  <link rel="icon" href="./src/images/icons/favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
 <body class="bg-gray-100 font-sans">
